# workerplex_server

./: .gitignore  .gitmodules  CMakeLists.txt
docker/: Dockerfile  Makefile
src/: main.cpp
src/apiserver/: ApiServer.cpp  ApiServer.hpp  RequestParser.cpp  RequestParser.hpp
src/workers/longtask/: LongTask.cpp  LongTask.hpp
src/workers/pingpong/: PingPong.cpp  PingPong.hpp
